<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!--Radio buttons in cardslist-->
    <string name="selected_card">\uea54</string>
    <string name="not_selected_card">\uea56</string>


    <!-- Texts on buttons -->


    <!-- Activity titles -->
    <string name="title_activity_register_card">Skrá kort</string>
    <string name="title_activity_tokenize_card">Kort skráð</string>
    <string name="title_activity_account_management">Nýskráning</string>
    <string name="title_activity_payment">Greiða</string>
    <string name="title_activity_show_transactions">Yfirlit</string>
    <string name="title_activity_change_selected_card">Skipt um valið kort</string>
    <string name="title_activity_card_customization">Skrá kort</string>


    <string name="app_name">Oturgjöld</string>
    <string name="action_settings">Stillingar</string>


    <!-- Button and input field labels -->
    <string name="label_name">Nafn</string>
    <string name="label_cardholder_name">Fullt nafn korthafa</string>
    <string name="label_card_number">Kortanúmer</string>
    <string name="label_validity">Gildistími</string>
    <string name="label_month">Mán</string>
    <string name="label_year">Ár</string>
    <string name="label_cvv">Öryggisnúmer</string>
    <string name="label_next">Áfram</string>
    <string name="label_cancel">Hætta við</string>
    <string name="label_cancel_short">Hætta</string>
    <string name="label_finalize_card">Skrá</string>
    <string name="label_customize_nick">Kenninafn</string>
    <string name="label_yes_caps">JÁ</string>
    <string name="label_no_caps">NEI</string>
    <string name="button_register_card">Skrá kort</string>
    <string name="button_register_account">Nýskráning</string>

    <!-- Error messages -->
    <string name="error_invalid_cardholder_name">Sláðu inn nafn korthafa</string>
    <string name="error_invalid_cardnumber">Sláðu inn gilt kortanúmer</string>
    <string name="error_invalid_validity_month">Veldu gildan mánuð</string>
    <string name="error_invalid_validity_year">Veldu gilt ár</string>
    <string name="error_invalid_cvv">Sláðu inn gilt öryggisnúmer</string>
    <string name="error_invalid_ssn">Rangt form á kennitölu</string>
    <string name="error_no_network">Nettenging ekki virk</string>
    <string name="error_general_network">Villa í nettengingu, reyndu aftur</string>
    <string name="error_network_token">Gat ekki sótt lykla fyrir Oturgjöld. Reyndu að aftengjast neti og tengjast aftur. Hafðu samband við þjónustudeild ef vandamál er viðvarandi.</string>
    <string name="error_general">Óþekkt villa, hafðu samband við þjónustudeild</string>
    <string name="error_register_card">Villa í innslætti. Kort var ekki skráð</string>
    <string name="error_customize_pin_length">PIN þarf að vera fjórir stafir.</string>

    <string name="enter_pin">Sláðu inn PIN</string>
    <string name="pin">PIN</string>
    <string name="pay">Greiða</string>


    <string name="action_getBalance">Sækja stöðu korts</string>
    <string name="action_getTransactions">Yfirlit</string>
    <string name="action_change_selected_card">Skipta um valið kort</string>


    <string name="service_name">CardEmulation Sample</string>
    <string name="card_title">Sample Loyalty Card</string>


    <string name="payment_enter_pin">Sláðu inn PIN</string>
    <string name="payment_tap_to_pay">Leggðu síma að posa til að greiða</string>

    <string name="card_fragment_balance">Staða:</string>
    <string name="card_fragment_see_balance">Sjá stöðu</string>
    <string name="card_fragment_get_balance">Sæki ...</string>

    <string name="transactions_no_transaction">Engar færslur</string>

    <!--web service urls-->
    <string name="service_account_url">https://kortagleypir.herokuapp.com/user</string>
    <string name="service_card_url">https://kortagleypir.herokuapp.com/card</string>
    <string name="service_token_url">https://kortagleypir.herokuapp.com/token</string>
    <string name="service_transaction_url">https://kortagleypir.herokuapp.com/transaction</string>
    <string name="service_balance_url">https://kortagleypir.herokuapp.com/card/balance/</string>

    <!--for displaying first three four groupings of credit card number-->
    <string name="card_number_xes">xxxx-xxxx-xxxx-</string>


    <!--for conveying specific information to app user-->
    <!-- RegisterAccount -->
    <string name="info_register_account">Velkomin. Vinsamlega skráið nafn og kennitölu</string>
    <!-- CustomizeCard -->
    <string name="info_pin">PIN fyrir kortið til notkunar í Oturgjöldum. Ekki slá inn sama PIN og bankinn gaf út.</string>
    <string name="info_nick">Gælunafn fyrir kortið. Birt með kortinu til að auðvelda að aðgreina kort. Valkvæmt.</string>
    <string name="info_image">Táknmynd fyrir kortið. Valkvæmt.</string>
    <!-- FinalizeRegisterCard -->
    <string name="info_finalize_service_response">Kort hefur verið skráð</string>
    <string name="info_finalize_prompt_next_action">Skrá annað kort?</string>
    <string name="info_finalize_request_sent">Sendi fyrirspurn</string>

    <!-- Payment / Card Service-->
    <string name="info_payment_sent">Greiðslubeiðni hefur verið send yfir í posa</string>
    <string name="info_no_token_available">Vantar færslulykla. Athuga netsamband</string>


    <string name="medium_text">Medium Text</string>
    <string name="date">Date</string>
    <string name="vendor">Vendor</string>
    <string name="card_icon">\uE600</string>
    <string name="ssn">Kennitala</string>
    <string name="radio_button">\uea56</string>
    <string name="card_fragment_base">XXXX XXXX XXXX 1234</string>

    <string name="pin_1">1</string>
    <string name="pin_2">2</string>
    <string name="pin_3">3</string>
    <string name="pin_4">4</string>
    <string name="pin_5">5</string>
    <string name="pin_6">6</string>
    <string name="pin_7">7</string>
    <string name="pin_8">8</string>
    <string name="pin_9">9</string>
    <string name="pin_0">0</string>

    <string name="pin_erase">\uE602</string>
    <string name="arrow_up">\uea3c</string>
    <string name="cardimage_description">Mynd fyrir kort.</string>
    <string name="cardimage_shadow">Skuggi fyrir kort.</string>
    <string name="empty"></string>

</resources>
