
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/leather_background"
    tools:context="is.valitor.oturgjold.app.RegisterCardActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:weightSum="1">

        <TextView
            android:id="@+id/titleCardHolderName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="@dimen/inputblock_horzontal_margin"
            android:layout_marginRight="@dimen/inputblock_horzontal_margin"
            android:layout_marginTop="@dimen/inputblock_vertical_margin"
            android:text="@string/label_cardholder_name" />

        <TextView
            android:id="@+id/cardholderName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/medium_text"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="@dimen/inputblock_horzontal_margin"
            android:layout_marginRight="@dimen/inputblock_horzontal_margin"
            android:layout_marginTop="@dimen/inputblock_vertical_margin"
            android:text="@string/label_card_number" />

        <EditText
            android:id="@+id/editCardNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="@dimen/inputblock_horzontal_margin"
            android:layout_marginRight="@dimen/inputblock_horzontal_margin"
            android:digits="0123456789 "
            android:imeOptions="actionNext"
            android:inputType="number"
            android:maxLength="19" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/label_validity" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:weightSum="6">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/label_month" />

            <Spinner
                android:id="@+id/spinnerValidityMonth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="2"
                android:layout_marginRight="@dimen/inputblock_horzontal_margin"
                android:popupBackground="@drawable/menu_dropdown_panel_oturgjold"
                android:focusable="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="@dimen/inputblock_horzontal_margin"
                android:text="@string/label_year" />

            <Spinner
                android:id="@+id/spinnerValidityYear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="2"
                android:popupBackground="@drawable/menu_dropdown_panel_oturgjold"
                android:focusable="true" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/inputblock_horzontal_margin"
                android:layout_marginRight="@dimen/inputblock_horzontal_margin"
                android:layout_marginTop="@dimen/inputblock_vertical_margin"
                android:layout_weight="1"
                android:text="@string/label_cvv" />
            <!-- For keeping weight -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/inputblock_horzontal_margin"
                android:layout_marginRight="@dimen/inputblock_horzontal_margin"
                android:layout_marginTop="@dimen/inputblock_vertical_margin"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/editCardCvv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/inputblock_horzontal_margin"
                android:layout_marginRight="@dimen/inputblock_horzontal_margin"
                android:layout_weight="1"
                android:inputType="number"
                android:maxLength="4" />

            <!-- For keeping weight -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/inputblock_horzontal_margin"
                android:layout_marginRight="@dimen/inputblock_horzontal_margin"
                android:layout_weight="1" />
        </LinearLayout>


    </LinearLayout>

    <Button
        android:id="@+id/button_register_card_next"
        style="@style/ButtonOrangeRounded"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="@dimen/inputblock_vertical_margin"
        android:layout_marginRight="@dimen/inputblock_horzontal_margin"
        android:clickable="true"
        android:nestedScrollingEnabled="true"
        android:onClick="createCardNext"
        android:text="@string/label_next" />
</RelativeLayout>

