<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/leather_background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="is.valitor.lokaverkefni.oturgjold.CustomizeCardActivity">

    <TextView
        android:id="@+id/customize_pin_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/info_pin" />

    <EditText
        android:id="@+id/customize_pin_inputfield"
        android:layout_width="80sp"
        android:layout_height="wrap_content"
        android:layout_below="@id/customize_pin_title"
        android:inputType="number"
        android:maxLength="4"
        android:nextFocusDown="@+id/customize_nick_input" />


    <TextView
        android:id="@+id/customize_nick_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/customize_pin_inputfield"
        android:text="@string/info_nick" />

    <LinearLayout
        android:id="@+id/customize_nick_inputfield"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/customize_nick_title">

        <EditText
            android:id="@+id/customize_nick_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:maxLength="16"
            android:nextFocusDown="@+id/customize_next"
            android:singleLine="true"
            android:inputType="text"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2" />
    </LinearLayout>

    <TextView
        android:id="@+id/customize_image_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/customize_nick_inputfield"
        android:text="@string/info_image" />

    <LinearLayout
        android:id="@+id/customize_look_1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/customize_image_title"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:weightSum="3">

        <ImageButton
            android:id="@+id/ibAbsBrown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:clickable="true"
            android:onClick="onSelectCardImage"
            android:src="@drawable/ic_abs_brown_creditcard"
            android:contentDescription="@string/cardimage_description"/>

        <ImageButton
            android:id="@+id/ibAbsBlue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:clickable="true"
            android:onClick="onSelectCardImage"
            android:src="@drawable/ic_abs_blue_creditcard" />

        <ImageButton
            android:id="@+id/ibAbsRed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:clickable="true"
            android:onClick="onSelectCardImage"
            android:src="@drawable/ic_abs_red_creditcard"
            android:contentDescription="@string/cardimage_description"/>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/customize_look_2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/customize_look_1"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:weightSum="3">

        <ImageButton
            android:id="@+id/ibRainCyan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:clickable="true"
            android:onClick="onSelectCardImage"
            android:src="@drawable/ic_rain_cyan_creditcard"
            android:contentDescription="@string/cardimage_description"/>

        <ImageButton
            android:id="@+id/ibRainBlue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:clickable="true"
            android:onClick="onSelectCardImage"
            android:src="@drawable/ic_rain_blue_creditcard"
            android:contentDescription="@string/cardimage_description"/>

        <ImageButton
            android:id="@+id/ibRainRed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:clickable="true"
            android:onClick="onSelectCardImage"
            android:src="@drawable/ic_rain_red_creditcard"
            android:contentDescription="@string/cardimage_description"/>
    </LinearLayout>
    <!-- !!! -->
    <Button
        android:id="@+id/customize_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:clickable="true"
        android:onClick="finalizeCard"
        android:text="@string/label_finalize_card"
        style="@style/ButtonOrangeRounded" />


</RelativeLayout>
