<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="is.valitor.oturgjold.app.TokenizeCardActivity">

    <LinearLayout
        android:id="@+id/tokenize_linear"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:id="@+id/serviceResponse"
            android:layout_gravity="center_horizontal" />

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tokCardProgressBar"
            android:layout_gravity="center_horizontal"
            android:indeterminate="true"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Finish"
            android:id="@+id/button_finish_default_card"
            android:layout_gravity="bottom"
            android:onClick="defaultFinish"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Skrá annað kort"
            android:id="@+id/reg_new_card"
            android:layout_gravity="bottom"
            android:onClick="registerCard"/>

    </LinearLayout>
</RelativeLayout>
